# DuetOS Nvidia GSP firmware-image parser.
#
# Parses NVIDIA Turing+ GPU System Processor (GSP) firmware
# container blobs (`gsp_*.bin`). The 24-byte outer header + per-
# arch inner descriptor + ELF64 RISC-V payload come from install
# media or a firmware-staging path — attacker-controllable when
# either path is hostile. Rust-Subsystems P1 (GPU / asset
# parsers).
#
# Standalone no_std rlib; C ABI consumed by
# kernel/drivers/gpu/nvidia_gsp_fw.cpp.

[package]
name = "duetos_nvidia_gsp_fw"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS NVIDIA GSP firmware-image (nvfw_bin_hdr) parser"

[lib]
name = "duetos_nvidia_gsp_fw"
crate-type = ["rlib"]

[lints]
workspace = true
