# DuetOS AMD-Vi IVRS (I/O Virtualization Reporting Structure)
# ACPI-table parser.
#
# Production crate. Mirror of duetos_dmar (Intel VT-d) for AMD.
# Validates the IVRS header + IVinfo field, walks the variable-
# length array of IVHD / IVMD blocks, and surfaces:
#   - IVHD (I/O Virtualization Hardware Definition) entries — each
#     one is an IOMMU with a base MMIO address + PCI segment.
#   - IVMD (I/O Virtualization Memory Definition) entries — must-
#     identity-map regions, analogous to VT-d RMRR.
# Other block types (3 = device-specific data) are recognised and
# skipped without parse-failing the table (forward-compat).
#
# Spec: AMD I/O Virtualization Technology (IOMMU) Specification,
# Rev 3.10 §5.2 (IVRS ACPI Table).
#
# This is a parser, not an enabler. The IOMMU register set + page
# tables + enable live in separate slices that consume this output.

[package]
name = "duetos_ivrs"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS AMD-Vi IVRS ACPI-table parser"

[lib]
name = "duetos_ivrs"
crate-type = ["rlib"]

[lints]
workspace = true
