# DuetOS Intel iwlwifi firmware TLV parser.
#
# Walks the 88-byte preamble + (u32 type, u32 length, payload, pad)
# TLV stream. Attacker-controllable firmware blob — Rust-
# Subsystems P1.

[package]
name = "duetos_iwlwifi_fw"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS Intel iwlwifi firmware TLV parser"

[lib]
name = "duetos_iwlwifi_fw"
crate-type = ["rlib"]

[lints]
workspace = true
